ajout testBranch class

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <div class="wrapper">
                                         <div class="container">
                                                 <div class="circle">
-                                                        <div class="line-red trait">
+                                                        <div class="line-red trait testBranch">
 
                                                                 <svg class="vertical6 line " version="1.1"
                                                                         xmlns="http://www.w3.org/2000/svg"
@@ -81,31 +81,33 @@
                                                                                 stroke-width="3" stroke="red"
                                                                                 d="M0 0 l1120 0" />
                                                                 </svg>
-                                                                <div id="red-value1" class="redPi" data-answer="π/4">
+                                                                <div id="red-value1" class="redPi pi" data-answer="π/4">
                                                                         <p>π/4</p>
                                                                 </div>
-                                                                <div id="red-value2" class="redPi" data-answer="3π/4">
+                                                                <div id="red-value2" class="redPi pi"
+                                                                        data-answer="3π/4">
                                                                         <p>3π/4</p>
                                                                 </div>
-                                                                <div id="red-value3" class="redPi" data-answer="5π/4">
+                                                                <div id="red-value3" class="redPi i" data-answer="5π/4">
                                                                         <p>5π/4</p>
                                                                 </div>
-                                                                <div id="red-value4" class="redPi" data-answer="7π/4">
+                                                                <div id="red-value4" class="redPi pi"
+                                                                        data-answer="7π/4">
                                                                         <p>7π/4</p>
                                                                 </div>
-                                                                <div class="red-cos-value-pos red-cos"
+                                                                <div class="red-cos-value-pos red-cos cos"
                                                                         data-answer="√2/2">
                                                                         <p>√2/2</p>
                                                                 </div>
-                                                                <div class="red-cos-value-neg red-cos"
+                                                                <div class="red-cos-value-neg red-cos cos"
                                                                         data-answer="-√2/2">
                                                                         <p>-√2/2</p>
                                                                 </div>
-                                                                <div class="red-sin-value-pos red-sin"
+                                                                <div class="red-sin-value-pos red-sin sin"
                                                                         data-answer="√2/2">
                                                                         <p>√2/2</p>
                                                                 </div>
-                                                                <div class="red-sin-value-neg red-sin"
+                                                                <div class="red-sin-value-neg red-sin sin"
                                                                         data-answer="-√2/2">
                                                                         <p>-√2/2</p>
                                                                 </div>
@@ -160,35 +162,35 @@
                                                                                 stroke-width="3" stroke="green"
                                                                                 d="M0 0 l1120 0" />
                                                                 </svg>
-                                                                <div id="green-value1" class="greenPi"
+                                                                <div id="green-value1" class="greenPi pi"
                                                                         data-answer="π/6">
                                                                         <p>π/6</p>
                                                                 </div>
-                                                                <div id="green-value2" class="greenPi"
+                                                                <div id="green-value2" class="greenPi pi"
                                                                         data-answer="5π/6">
                                                                         <p>5π/6</p>
                                                                 </div>
-                                                                <div id="green-value3" class="greenPi"
+                                                                <div id="green-value3" class="greenPi pi"
                                                                         data-answer="7π/6">
                                                                         <p>7π/6</p>
                                                                 </div>
-                                                                <div id="green-value4" class="greenPi"
+                                                                <div id="green-value4" class="greenPi pi"
                                                                         data-answer="11π/6">
                                                                         <p>11π/6</p>
                                                                 </div>
-                                                                <div class="green-cos-value-pos green-cos"
+                                                                <div class="green-cos-value-pos green-cos cos"
                                                                         data-answer="√3/2">
                                                                         <p>√3/2</p>
                                                                 </div>
-                                                                <div class="green-cos-value-neg green-cos"
+                                                                <div class="green-cos-value-neg green-cos cos"
                                                                         data-answer="-√3/2">
                                                                         <p>-√3/2</p>
                                                                 </div>
-                                                                <div class="green-sin-value-pos green-sin"
+                                                                <div class="green-sin-value-pos green-sin sin"
                                                                         data-answer="1/2">
                                                                         <p>1/2</p>
                                                                 </div>
-                                                                <div class="green-sin-value-neg green-sin"
+                                                                <div class="green-sin-value-neg green-sin sin"
                                                                         data-answer="-1/2">
                                                                         <p>-1/2</p>
                                                                 </div>
@@ -242,31 +244,35 @@
                                                                                 stroke-width="3" stroke="blue"
                                                                                 d="M0 0 l1120 0" />
                                                                 </svg>
-                                                                <div id="blue-value1" class="bluePi" data-answer="π/3">
+                                                                <div id="blue-value1" class="bluePi pi"
+                                                                        data-answer="π/3">
                                                                         <p>π/3</p>
                                                                 </div>
-                                                                <div id="blue-value2" class="bluePi" data-answer="2π/3">
+                                                                <div id="blue-value2" class="bluePi pi"
+                                                                        data-answer="2π/3">
                                                                         <p>2π/3</p>
                                                                 </div>
-                                                                <div id="blue-value3" class="bluePi" data-answer="4π/3">
+                                                                <div id="blue-value3" class="bluePi pi"
+                                                                        data-answer="4π/3">
                                                                         <p>4π/3</p>
                                                                 </div>
-                                                                <div id="blue-value4" class="bluePi" data-answer="5π/3">
+                                                                <div id="blue-value4" class="bluePi pi"
+                                                                        data-answer="5π/3">
                                                                         <p>5π/3</p>
                                                                 </div>
-                                                                <div class="blue-cos-value-pos blue-cos"
+                                                                <div class="blue-cos-value-pos blue-cos cos"
                                                                         data-answer="1/2">
                                                                         <p>1/2</p>
                                                                 </div>
-                                                                <div class="blue-cos-value-neg blue-cos"
+                                                                <div class="blue-cos-value-neg blue-cos cos"
                                                                         data-answer="-1/2">
                                                                         <p>-1/2</p>
                                                                 </div>
-                                                                <div class="blue-sin-value-pos blue-sin"
+                                                                <div class="blue-sin-value-pos blue-sin sin"
                                                                         data-answer="√3/2">
                                                                         <p>√3/2</p>
                                                                 </div>
-                                                                <div class="blue-sin-value-neg blue-sin"
+                                                                <div class="blue-sin-value-neg blue-sin sin"
                                                                         data-answer="-√3/2">
                                                                         <p>-√3/2</p>
                                                                 </div>
