enlever le commentaire et maintenant ne fonctionne plus

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                                         <p>TrigoGame</p>
                                 </a>
                                 <ul>
-                                        <li><button><i class="far fa-play-circle"></i></button></li>
+                                        <li><button class="play"><i class="far fa-play-circle play-icon"></i></button>
+                                        </li>
                                         <li><button><i class="far fa-stop-circle"></i></button></li>
                                         <li><button><i class="far fa-pause-circle"></i></button></li>
                                 </ul>
@@ -31,7 +32,7 @@
                                 <div class="wrapper">
                                         <div class="container">
                                                 <div class="circle">
-                                                        <div class="line-red trait testBranch">
+                                                        <div class="line-red trait">
 
                                                                 <svg class="vertical6 line " version="1.1"
                                                                         xmlns="http://www.w3.org/2000/svg"
@@ -88,7 +89,8 @@
                                                                         data-answer="3π/4">
                                                                         <p>3π/4</p>
                                                                 </div>
-                                                                <div id="red-value3" class="redPi i" data-answer="5π/4">
+                                                                <div id="red-value3" class="redPi pi"
+                                                                        data-answer="5π/4">
                                                                         <p>5π/4</p>
                                                                 </div>
                                                                 <div id="red-value4" class="redPi pi"
