--- a/index.html
+++ b/index.html
@@ -302,7 +302,12 @@
                                                 </div>
 
                                         </div>
+                                        <section class="questions">
+                                                <button class="answers" id="true-answer" data-answer=""></button>
+                                                <button class="answers" id="false answer1" data-answer=""></button>
+                                                <button class="answers" id="false-answer2" data-answer=""></button>
 
+                                        </section>
 
 
 
