trying add the class ready on click but not works each time

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
 
                                         </div>
                                         <section class="questions">
-                                                <button class="answers" id="true-answer" data-answer=""></button>
-                                                <button class="answers" id="false answer1" data-answer=""></button>
-                                                <button class="answers" id="false-answer2" data-answer=""></button>
+                                                <button class="answers" data-answer=""></button>
+                                                <button class="answers" data-answer=""></button>
+                                                <button class="answers" data-answer=""></button>
 
                                         </section>
 
