--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
                                         <p>TrigoGame</p>
                                 </a>
                                 <ul>
-                                        <li><button class="play"><i class="far fa-play-circle play-icon"></i></button>
+                                        <li><button class="play" id="start"><i
+                                                                class="far fa-play-circle play-icon"></i></button>
                                         </li>
-                                        <li><button><i class="far fa-stop-circle"></i></button></li>
-                                        <li><button><i class="far fa-pause-circle"></i></button></li>
+                                        <li><button class="notUsed"><i class="far fa-stop-circle"></i></button></li>
+                                        <li><button class="notUsed"><i class="far fa-pause-circle"></i></button></li>
                                 </ul>
                         </nav>
                 </header>
@@ -302,10 +303,14 @@
                                                 </div>
 
                                         </div>
+                                        <div class="feedback feedback-positif"></div>
+                                        <div class="feedback feedback-negatif"></div>
+
                                         <section class="questions">
                                                 <button class="answers" data-answer=""></button>
                                                 <button class="answers" data-answer=""></button>
                                                 <button class="answers" data-answer=""></button>
+
 
                                         </section>
 
