ajout feedback user

--- a/index.html
+++ b/index.html
@@ -303,24 +303,21 @@
                                                 </div>
 
                                         </div>
-                                        <div class="feedback feedback-positif"></div>
-                                        <div class="feedback feedback-negatif"></div>
-
-                                        <section class="questions">
-                                                <button class="answers" data-answer=""></button>
-                                                <button class="answers" data-answer=""></button>
-                                                <button class="answers" data-answer=""></button>
-
-
-                                        </section>
-
-
-
-
                                 </div>
 
                         </section>
+                        <section class="feedback-user">
+                                <div class="feedback feedback-positif"></div>
+                                <div class="feedback feedback-negatif"></div>
 
+                                <section class="questions">
+                                        <button class="answers" data-answer=""></button>
+                                        <button class="answers" data-answer=""></button>
+                                        <button class="answers" data-answer=""></button>
+
+
+                                </section>
+                        </section>
                 </main>
                 <footer>
                         <p>&copy;copyright Olfa MASLAH</p>
