essaie pour régler le problemedes valeurs button aleatoire

--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                                 <div class="feedback feedback-negatif"></div>
 
                                 <section class="questions">
-                                        <button class="answers" data-answer=""></button>
-                                        <button class="answers" data-answer=""></button>
-                                        <button class="answers" data-answer=""></button>
+                                        <button class="answers expecting-answer" data-answer=""></button>
+                                        <button class="answers expecting-answer" data-answer=""></button>
+                                        <button class="answers expecting-answer" data-answer=""></button>
 
 
                                 </section>
