--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                                         <p>TrigoGame</p>
                                 </a>
                                 <ul>
-                                        <li><button class="play" id="start"><i
+                                        <li><button class="play" id="start" aria-label="button for play"
+                                                        title="test your memory and find the right value"><i
                                                                 class="far fa-play-circle play-icon"></i></button>
                                         </li>
                                         <li><button class="notUsed"><i class="far fa-stop-circle"></i></button></li>
