remove position absolute footer et translate comments from french to english

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                                         title="test your memory and find the right value"><i
                                                                 class="far fa-play-circle play-icon"></i></button>
                                         </li>
-                                        <!--ici j'ai gardé les 2 buttons ci-dessous car je vais les intégrer dans mes strech goal mais ils ne sont pas utilisé pour ce MVP-->
+                                        <!-- Those buttons are not use for this MVP, but will be used in the final version of the project for my protfolio -->
                                         <li><button class="notUsed"><i class="far fa-stop-circle"
                                                                 aria-label="button for stop"
                                                                 title="stop the game by pressing button stop"></i></button>
