--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <header>
 
                         <div>
-                                <p class="name-game">TrigoGame</p>
+                                <h1 class="name-game"><span class="tri">Tri</span><span class="go">go</span><span
+                                                class="game">Game</span></h1>
+                                <p class="memorise-test">When you ready, press play to test your memory!</p>
                         </div>
                         <p class="memorise-instruction">Stay focus for memorising the Unit Circle!</p>
-                        <p class="memorise-test">When you ready, press play to test your memory!</p>
-                        <p class="try-again">Don't give up, press play and try again!</p>
-                        <p class="well-done">Well done! Press play to continue!</p>
+
                         <nav>
                                 <ul>
                                         <li><button class="play" id="start" aria-label="button for play"
@@ -336,6 +336,7 @@
 
 
                                 </section>
+
                         </section>
                 </main>
                 <footer>
